...

class StudioSettingsViewModel : ViewModel() {
    var selectedResolutionKey by mutableStateOf<String?>(null)
    var selectedCameraLensFacing by mutableStateOf(CameraLensFacing.BACK)
    var supportedCameraResolutions by mutableStateOf(emptyList<CameraResolution>())
    var selectedAudioDeviceId by mutableIntStateOf(-1)
    var selectedBroadcastPlatform by mutableStateOf("YouTube")
    var broadcastTitle by mutableStateOf("")
    var broadcastDescription by mutableStateOf("")
    var broadcastPrivacy by mutableStateOf("private")
    var broadcastAudience by mutableStateOf("unset")
    var broadcastCategoryId by mutableStateOf("")
}
...
